[package]
name = "bluetooth"
version = "0.1.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.5.4"
thiserror = "1.0.22"

[dependencies.winapi]
version = "0.3.9"
features = ["bluetoothleapis", "bluetoothapis", "errhandlingapi", "minwinbase", "handleapi"]
