[package]
name = "btwin"
version = "0.1.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cli"]

[features]
winapi-ble = ["winapi", "winapi/bluetoothleapis"]
winrt-ble = ["winrt"]

[dependencies.thiserror]
version = "~1.0.22"

[dependencies.winapi]
version = "~0.3.9"
optional = true
features = ["impl-debug", "impl-default", "bluetoothapis", "errhandlingapi", "minwinbase", "handleapi"]

[dependencies.winrt]
version = "~0.7.2"
optional = true
