[package]
name = "winbt"
version = "0.1.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cli"]

[features]
default = ["winapi"]
"winapi-ble" = ["winapi", "winapi/bluetoothleapis", "winapi/bthledef"]
"winrt-ble" = ["winrt"]

[dependencies.thiserror]
version = "~1.0.22"

[dependencies.winapi]
version = "~0.3.9"
optional = true
features = [
    "std",
    "impl-debug",
    "impl-default",
    "guiddef",
    "minwinbase",
    "winbase",
    "winerror",
    "ws2def",
    "errhandlingapi",
    "handleapi",
    "bluetoothapis"
]

[dependencies.winrt]
optional = true
git = "https://github.com/microsoft/winrt-rs"

[build-dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs" }

[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"
